# haptics-lab-py

./: README.md  pyproject.toml  run.bat  run.command
haptics_lab_py/: box_plot.ipynb  corr_plot.ipynb
haptics_lab_py/mocap/: test_mocap.py
haptics_lab_py/plot/: box_plot.ipynb  plot_style.py
haptics_lab_py/run/: main.py
haptics_lab_py/run/config/: activate.sh  activate.sh.env
haptics_lab_py/serial/: test_serial_server.py
haptics_lab_py/serial/SerialSample/: SerialSample.ino
